styles.css
/* The game boards properties */


body {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    background-color: black;
}

/* board size */
.grid {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-content: center;
    justify-content: center;
    margin-left: auto;
    margin-right: auto;
    height: 600px;
    width: 800px;
}
img {
    max-width: 200px;
    max-height: 200px;
    
}
/* Score */
h3 {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-content: center;
    color: rgb(14, 226, 180)
}
.result{display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-content: center;
    color: rgb(14, 226, 180)}

